Fix z-index on footer buttons.

--- a/css/src/_footer-buttons.scss
+++ b/css/src/_footer-buttons.scss
@@ -11,6 +11,7 @@
 		right: 0;
 		margin: 0 auto;
 		max-width: 1450px;
+		z-index: 100;
 	}
 
 	@include respond-to( $bp-m ) {	
